--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div tabindex="0" class="col-sm-12 text-center">
-						<img alt="" src="img/title.png" />
+						La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -147,9 +147,10 @@
 					</figure>
 				</div>
 				<div class="row voffset-lg voffset">
-					<div tabindex="0" class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-					</div>
+					<p tabindex="0" class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+						<q labelledid="author">La chouette agence est une excellente agence web ! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
+						<cite id ="author">Maxime Guibard, PDG de À vos fourchettes</cite>
+					</p>
 				</div>
 			</div>
 
@@ -187,10 +188,9 @@
 			<div class="container bloc-lg">
 
 				<div class="row">
-					<div tabindex="0" class="col-sm-12 text-center">
-
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
-					</div>
+					<h2 tabindex="0" class="col-sm-12 text-center">
+						Nous travaillons avec beaucoup de clients voici nos réalisations.
+					</h2>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 
@@ -314,8 +314,6 @@
 									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-
 						</div>
 						<div class="row">
 
