--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
@@ -101,9 +101,9 @@
 
 			<div class="container bloc-md">
 				<div class="row">
-					<div tabindex="0" class="col-sm-12 text-center">
+					<h2 tabindex="0" class="col-sm-12 text-center title">
 						La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.
-					</div>
+					</h2>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
 					<figure tabindex="0" role="figure" class="col-sm-4">
@@ -147,9 +147,9 @@
 					</figure>
 				</div>
 				<div class="row voffset-lg voffset">
-					<p tabindex="0" class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+					<p tabindex="0" class="col-xs-12 col-md-8 col-md-offset-2 text-center citation">
 						<q labelledid="author">La chouette agence est une excellente agence web ! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
-						<cite id ="author">Maxime Guibard, PDG de À vos fourchettes</cite>
+						<cite id ="author"><br>Maxime Guibard, PDG de À vos fourchettes</cite>
 					</p>
 				</div>
 			</div>
@@ -283,7 +283,7 @@
 		<!-- bloc-5-cta END -->
 
 		<!-- Footer - bloc-8 -->
-		<section class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
@@ -292,74 +292,61 @@
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 
-						<div class="row row-no-gutters social">
+						<nav aria-label="navigation réseaux sociaux" class="row row-no-gutters social">
 
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a role="button" aria-label="twitter" class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a role="button" aria-label="Facebook" class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a role="button" aria-label="Dribbble" class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+									<a role="button" aria-label="Instagram" class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-						</div>
-						<div class="row">
+						</nav>
+						<nav aria-label="Navigation Annuaires" class="row">
 
 							<div class="col-sm-4">
-								<p>Partenaires</p>
-								<ul>
-									<li><a href="voiture.com">voiture.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="matoiture.com">matoiture.com</a></li>
-									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-								</ul>		
-							</div>
-							<div class="col-sm-4">
-								<p>Annuaires liste 1</p>
+								<p>Annuaires Agence</p>
 								<ul>
 									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
 									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-									<li><a href="123seoture.com">123seo.com</a></li>
 									<li><a href="123site.com">123site.com</a></li>
 									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
 									<li><a href="listeagence.com">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com">listeseo.com</a></li>
 								</ul>
 							</div>
 							<div class="col-sm-4">
-								<p>Annuaires liste 2</p>
+								<p>Annuaires SEO</p>
 								<ul>
+									<li><a href="listeseo.com">listeseo.com</a></li>
+									<li><a href="123seoture.com">123seo.com</a></li>
+									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
 									<li><a href="betterseo.com">betterseo.com</a></li>
+									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
 									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
 									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-									<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-									<li><a href="liensagogo.com">liensagogo.com</a></li>
-									<li><a href="backlink.com">backlink.com</a></li>
-									<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
 									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
 									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
 								</ul>
 							</div>
 
-						</div>
+						</nav>
 					</div>
 				</div>
 			</div>
-		</section>
+		</footer>
 		<!-- Footer - bloc-8 END -->
 
 	</div>
