--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 		<!-- bloc-1-presentation -->
 		<section role="section présentation" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 
-			<h1 tabindex="0" class="text-center hero-bloc-text tc-white ">
-				La chouette agence.
+			<h1 tabindex="0" class="text-center hero-bloc-text tc-white title_bellow_paper ">
+				La chouette agence
 			</h1>
 			<div class="container bloc-lg">
 
@@ -269,7 +269,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 
-					<h2 tabindex="0" class="mg-md text-center tc-white">
+					<h2 tabindex="0" class="mg-md text-center tc-white title_bellow_paper">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
