Remove expanded media rules

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 			<div class="container bloc-md">
 				<div class="row">
-					<h2 tabindex="0" class="col-sm-12 text-center title">
+					<h2 tabindex="0" class=" text-center title">
 						La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.
 					</h2>
 				</div>
