--- a/index.html
+++ b/index.html
@@ -283,42 +283,42 @@
 		<!-- bloc-5-cta END -->
 
 		<!-- Footer - bloc-8 -->
-		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-			<div class="container bloc-sm">
-				<div class="row">
-					<div class="col-sm-12">
+		<footer class="bloc bgc-atomic-tangerine d-bloc align-items-around" id="bloc-8">
+			<div class="container bloc-sm-12">
+				<div class="row ">
+					<div class="col-md-12">
 
 						<p class="text-center white">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 
-						<nav aria-label="navigation réseaux sociaux" class="row row-no-gutters social">
+						<nav aria-label="navigation réseaux sociaux" class="row row-no-gutters social container">
 
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" aria-label="twitter" class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a role="button" aria-label="twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" aria-label="Facebook" class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a role="button" aria-label="Facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" aria-label="Dribbble" class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a role="button" aria-label="Dribbble" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" aria-label="Instagram" class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+									<a role="button" aria-label="Instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</nav>
-						<nav aria-label="Navigation Annuaires" class="row">
+						<nav aria-label="Navigation Annuaires" class="row container bloc-md-12 bloc-sm-4 text-justify">
 
-							<div class="col-sm-4">
-								<p>Annuaires Agence</p>
+							<div class="col-md-4 col-md-offset-3 col-offset-2">
+								<h3 class="caption">Annuaires Agence</h3>
 								<ul>
 									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
@@ -327,8 +327,8 @@
 									<li><a href="listeagence.com">listeagence.com</a></li>
 								</ul>
 							</div>
-							<div class="col-sm-4">
-								<p>Annuaires SEO</p>
+							<div class="col-md-4">
+								<h3 class="caption">Annuaires SEO</h3>
 								<ul>
 									<li><a href="listeseo.com">listeseo.com</a></li>
 									<li><a href="123seoture.com">123seo.com</a></li>
