--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="index.html">Accueil</a>
+								<a tabindex="0" href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a href="page2.html">Contact</a>
+								<a tabindex="0" href="page2.html">Contact</a>
 							</li>
 						</ul>
 
