--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
 		<!-- Footer - bloc-8 -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc align-items-around" id="bloc-8">
 			<div class="container bloc-sm-12">
-				<div class="row ">
+				<div class="row">
 					<div class="col-md-12">
 
-						<p class="text-center white">
+						<p class="text-center">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 
