--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 		<!-- bloc-0 -->
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
 
-			<header role="Entête principal" class="container bloc-sm">
+			<header class="container bloc-sm">
 				<nav class="navbar row">
-					<header role="Entête de navigation" class="navbar-header">
+					<header  class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
 							<img src="img/la-chouette-agence.png" alt="La chouette agence" height="40" />
@@ -71,7 +71,7 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
-		<section role="section présentation" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 
 			<h1 tabindex="0" class="text-center hero-bloc-text tc-white title_bellow_paper ">
 				La chouette agence
@@ -106,7 +106,7 @@
 					</h2>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
-					<figure tabindex="0" role="figure" class="col-sm-4">
+					<figure tabindex="0" class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
@@ -119,7 +119,7 @@
 							</p>
 						</figcaption>
 					</figure>
-					<figure tabindex="0" role="figure" class="col-sm-4">
+					<figure tabindex="0" class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
@@ -132,7 +132,7 @@
 							</p>
 						</figcaption> 
 					</figure>
-					<figure tabindex="0" role="figure" class="col-sm-4">
+					<figure tabindex="0" class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
@@ -292,30 +292,30 @@
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 
-						<nav aria-label="navigation réseaux sociaux" class="row row-no-gutters social container">
+						<nav class="row row-no-gutters social container">
 
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" aria-label="twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a role="button" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" aria-label="Facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a role="button" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" aria-label="Dribbble" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a role="button" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" aria-label="Instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+									<a role="button" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</nav>
-						<nav aria-label="Navigation Annuaires" class="row container bloc-md-12 bloc-sm-4 text-justify">
+						<nav class="row container bloc-md-12 bloc-sm-4 text-justify">
 
 							<div class="col-md-4 col-md-offset-3 col-offset-2">
 								<h3 class="caption">Annuaires Agence</h3>
