--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
-
 	<title>La chouette agence - Agence web basée à Lyon</title>
 
 
@@ -29,7 +22,7 @@
 </head>
 <body>
 	<!-- Principal conteneur -->
-	<div class="page-container">
+	<main class="page-container">
 
 		<!-- bloc-0 -->
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
@@ -296,22 +289,22 @@
 
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a role="button" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+									<a href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</nav>
@@ -349,9 +342,14 @@
 		</footer>
 		<!-- Footer - bloc-8 END -->
 
-	</div>
+	</main>
 	<!-- Principal conteneur END -->
 
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/gmaps.js"></script>
 
 </body>
 </html>
