--- a/page2.html
+++ b/page2.html
@@ -29,14 +29,14 @@
 </head>
 <body>
 	<!-- Principal conteneur -->
-	<div class="page-container">
+	<main class="page-container">
 
 		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc " id="bloc-0">
+		<div role="section" class="bloc bgc-white l-bloc " id="bloc-0">
 
-			<header role="Entête principal" class="container bloc-sm">
+			<header class="container bloc-sm">
 				<nav class="navbar row">
-					<header role="Entête de navigation" class="navbar-header">
+					<header class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
 							<img src="img/la-chouette-agence.png" alt="La chouette agence" height="40" />
@@ -70,7 +70,7 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-6 -->
-		<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12">
@@ -84,11 +84,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-6 END -->
 
 		<!-- bloc-7 -->
-		<div class="bloc bgc-white l-bloc" id="bloc-7">
+		<div role="section" class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-6">
@@ -138,42 +138,45 @@
 
 
 			<!-- Footer - bloc-8 -->
-			<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-				<div class="container bloc-sm">
+			<footer class="bloc bgc-atomic-tangerine d-bloc align-items-around" id="bloc-8">
+				<div class="container bloc-sm-12">
 					<div class="row">
-						<div class="col-sm-12">
-							<p class="text-center white">
+						<div class="col-md-12">
+
+							<p class="text-center">
 								La chouette agence - Agence web basée à Lyon.<br>
 							</p>
-							<div class="row row-no-gutters social">
+
+							<nav class="row row-no-gutters social container">
+
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+										<a href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+										<a href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+										<a href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+										<a href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
-							</div>
+							</nav>
 						</div>
 					</div>
 				</div>
-			</div>
+			</footer>
 			<!-- Footer - bloc-8 END -->
 
-		</div>
+		</main>
 		<!-- Principal conteneur END -->
 
 
