Adding SEO to page2. Rename it

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords" content="seo, google, site web, site internet, agence design paris">
-	<meta name="description" content="">
+	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-	<title>La chouette agence - Agence web basée à Lyon</title>
+	<title>La chouette agence - Agence web design basée à Lyon</title>
 
 
 	<!-- Analytics -->
@@ -48,10 +48,10 @@
 
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a tabindex="0" href="index.html">Accueil</a>
+								<a tabindex="0" href="#">Accueil</a>
 							</li>
 							<li>
-								<a tabindex="0" href="page2.html">Contact</a>
+								<a tabindex="0" href="agence_web_design.html">Contact</a>
 							</li>
 						</ul>
 
@@ -77,7 +77,7 @@
 
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Le chouette logo" />
 						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+							<a href="agence_web_design.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 						</div>
 
 					</div>
@@ -163,7 +163,7 @@
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 						</h2>
 						<p tabindex="0" class="text-center white">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="agence_web_design.html">Contactez notre équipe</a><br>
 						</p>
 
 					</div>
@@ -266,7 +266,7 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+						<a href="agence_web_design.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 
 				</div>
