--- a/agence_web_design.html
+++ b/agence_web_design.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords" content="">
-	<meta name="description" content="">
+	<meta name="description" content="Soumettez votre projet a notre agence web design ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -58,7 +58,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a href="page2.html">Contact</a>
+								<a href="#">Contact</a>
 							</li>
 						</ul>
 
