--- a/agence_web_design.html
+++ b/agence_web_design.html
@@ -35,7 +35,7 @@
 		<div role="section" class="bloc bgc-white l-bloc " id="bloc-0">
 
 			<header class="container bloc-sm">
-				<nav class="navbar row">
+				<nav role="nav" class="navbar row">
 					<header class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
@@ -151,22 +151,22 @@
 
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+										<a href="index.html"><span aria-hidden="true">Twitter</span><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+										<a href="index.html"><span aria-hidden="true">Facebook</span><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+										<a href="index.html"><span aria-hidden="true">dribbble</span><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+										<a href="index.html"><span aria-hidden="true">Instagram</span><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 							</nav>
