--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
 
 			<header class="container bloc-sm">
-				<nav role="nav" class="navbar row">
+				<nav role="navigation" class="navbar row">
 					<header  class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
