Debug whith axe

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords" content="seo, google, site web, site internet, agence design paris">
-	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement">
+	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -28,7 +28,7 @@
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
 
 			<header class="container bloc-sm">
-				<nav role="navigation" class="navbar row">
+				<nav class="navbar row" role="navigation">
 					<header  class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
@@ -289,22 +289,22 @@
 
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html"><span aria-hidden="true">Twitter</span><span class="fa fa-twitter icon-md"></span></a>
+									<a href="index.html" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html"><span aria-hidden="true">Facebook</span><span class="fa fa-facebook icon-md"></span></a>
+									<a href="index.html" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html"><span aria-hidden="true">dribbble</span><span class="fa fa-dribbble icon-md"></span></a>
+									<a href="index.html" aria-label="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html"><span aria-hidden="true">Instagram</span><span class="fa fa-instagram icon-md"></span></a>
+									<a href="index.html" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</nav>
