--- a/agence_web_design.html
+++ b/agence_web_design.html
@@ -151,22 +151,22 @@
 
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a href="index.html"><span aria-hidden="true">Twitter</span><span class="fa fa-twitter icon-md"></span></a>
+										<a href="index.html" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a href="index.html"><span aria-hidden="true">Facebook</span><span class="fa fa-facebook icon-md"></span></a>
+										<a href="index.html" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a href="index.html"><span aria-hidden="true">dribbble</span><span class="fa fa-dribbble icon-md"></span></a>
+										<a href="index.html" aria-label="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a href="index.html"><span aria-hidden="true">Instagram</span><span class="fa fa-instagram icon-md"></span></a>
+										<a href="index.html" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 							</nav>
