--- a/agence_web_design.html
+++ b/agence_web_design.html
@@ -35,7 +35,7 @@
 		<div role="section" class="bloc bgc-white l-bloc " id="bloc-0">
 
 			<header class="container bloc-sm">
-				<nav role="navigation" class="navbar row">
+				<nav class="navbar row" aria-label="Main navigation">
 					<header class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
