--- a/agence_web_design.html
+++ b/agence_web_design.html
@@ -147,7 +147,7 @@
 								La chouette agence - Agence web basée à Lyon.<br>
 							</p>
 
-							<nav class="row row-no-gutters social container">
+							<nav class="row row-no-gutters social container" aria-label="Social navigation">
 
 								<div class="col-sm-3">
 									<div class="text-center">
