--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 
-						<nav class="row row-no-gutters social container">
+						<nav class="row row-no-gutters social container" aria-label="Social navigation">
 
 							<div class="col-sm-3">
 								<div class="text-center">
@@ -308,7 +308,7 @@
 								</div>
 							</div>
 						</nav>
-						<nav class="row container bloc-md-12 bloc-sm-4 text-justify">
+						<nav class="row container bloc-md-12 bloc-sm-4 text-justify" aria-label="Footer navigation">
 
 							<div class="col-md-4 col-md-offset-3 col-offset-2">
 								<h3 class="caption">Annuaires Agence</h3>
