--- a/agence_web_design.html
+++ b/agence_web_design.html
@@ -78,7 +78,7 @@
 							Parlons web design !
 						</h1>
 						<p class="text-center mg-lg tight-width-whitespace title">
-							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+							Nous sommes ravis que vous souhaitiez collaborer avec notre agence de web design.<br>
 							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 						</p>
 					</div>
@@ -113,7 +113,7 @@
 							</div>
 							<div class="form-group">
 								<label for="message">
-									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+									Brief de votre projet web (Ajoutez autant de détails que nécessaire)<br>
 								</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 							</div> 
 							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">Envoyer</button>
