--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								&nbsp;Stratégie
 							</h2>
 							<p class="text-center ">
-								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+								Plutôt que de suggérer des web designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur site.<br>
 							</p>
 						</figcaption> 
 					</figure>
@@ -141,7 +141,7 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<p tabindex="0" class="col-xs-12 col-md-8 col-md-offset-2 text-center citation">
-						<q labelledid="author">La chouette agence est une excellente agence web ! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
+						<q labelledid="author">La chouette agence est une excellente agence de web design! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
 						<cite id ="author"><br>Maxime Guibard, PDG de À vos fourchettes</cite>
 					</p>
 				</div>
@@ -163,7 +163,7 @@
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 						</h2>
 						<p tabindex="0" class="text-center white">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="agence_web_design.html">Contactez notre équipe</a><br>
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site web de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="agence_web_design.html">Contactez notre équipe</a><br>
 						</p>
 
 					</div>
