Checking by with W3C validator

--- a/agence_web_design.html
+++ b/agence_web_design.html
@@ -1,4 +1,5 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
@@ -8,7 +9,7 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
@@ -32,11 +33,11 @@
 	<main class="page-container">
 
 		<!-- bloc-0 -->
-		<div role="section" class="bloc bgc-white l-bloc " id="bloc-0">
+		<div class="bloc bgc-white l-bloc " id="bloc-0">
 
 			<header class="container bloc-sm">
 				<nav class="navbar row" aria-label="Main navigation">
-					<header class="navbar-header">
+					<div class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
 							<img src="img/la-chouette-agence.png" alt="La chouette agence" height="40" />
@@ -49,7 +50,7 @@
 							<span class="icon-bar"></span>
 						</button>
 
-					</header>
+					</div>
 
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 
@@ -88,11 +89,11 @@
 		<!-- bloc-6 END -->
 
 		<!-- bloc-7 -->
-		<div role="section" class="bloc bgc-white l-bloc" id="bloc-7">
+		<div class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+						<form id="form_1" novalidate>
 							<div class="form-group">
 								<label for="name">
 									Nom
