--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href=".css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
@@ -29,7 +29,7 @@
 
 			<header class="container bloc-sm">
 				<nav class="navbar row" aria-label="Main navigation">
-					<header  class="navbar-header">
+					<div  class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
 							<img src="img/la-chouette-agence.png" alt="La chouette agence" height="40" />
@@ -42,7 +42,7 @@
 							<span class="icon-bar"></span>
 						</button>
 
-					</header>
+					</div>
 
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 
@@ -141,7 +141,7 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<p tabindex="0" class="col-xs-12 col-md-8 col-md-offset-2 text-center citation">
-						<q labelledid="author">La chouette agence est une excellente agence de web design! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
+						<q >La chouette agence est une excellente agence de web design! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
 						<cite id ="author"><br>Maxime Guibard, PDG de À vos fourchettes</cite>
 					</p>
 				</div>
