Get some text smaller

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					</figure>
 				</div>
 				<div class="row voffset-lg voffset">
-					<p tabindex="0" class="col-xs-12 col-md-8 col-md-offset-2 text-center citation">
+					<p tabindex="0" class="col-xs-12 col-md-8 col-md-offset-2 text-center citation text-sm">
 						<q >La chouette agence est une excellente agence de web design! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
 						<cite id ="author"><br>Maxime Guibard, PDG de À vos fourchettes</cite>
 					</p>
@@ -160,7 +160,7 @@
 					<div class="col-sm-12">
 
 						<h2 tabindex="0" class="mg-md text-center tc-white">
-							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.<br>
 						</h2>
 						<p tabindex="0" class="text-center white">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site web de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="agence_web_design.html">Contactez notre équipe</a><br>
@@ -181,7 +181,7 @@
 			<div class="container bloc-lg">
 
 				<div class="row">
-					<h2 tabindex="0" class="col-sm-12 text-center">
+					<h2 tabindex="0" class="col-sm-12 text-center text-sm">
 						Nous travaillons avec beaucoup de clients voici nos réalisations.
 					</h2>
 				</div>
@@ -189,7 +189,7 @@
 
 					<figure class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-							<img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" />
+							<img src="img/1.jpg" alt="Refonte du site web d'un journal" class="img-responsive portfolio-thumb" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -203,7 +203,7 @@
 
 					<figure class="col-sm-6">
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-							<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" />
+							<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -221,13 +221,13 @@
 					<figure class="col-sm-6">
 
 						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-							<img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/>
+							<img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/>
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
-							<p class="text-center">
+							<p class="text-center text-">
 								Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 							</p>
 						</figcaption>
@@ -236,7 +236,7 @@
 					<figure class="col-sm-6">
 
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-							<img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" />
+							<img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -262,7 +262,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 
-					<h2 tabindex="0" class="mg-md text-center tc-white title_bellow_paper">
+					<h2 tabindex="0" class="mg-md text-center tc-white title_bellow_paper text-sm">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
