Removing fontawesome files and, adding CDNJ to get only the icons that we'll use

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 
 	<title>La chouette agence - Agence web design basée à Lyon</title>
 
@@ -289,22 +288,22 @@
 
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
+									<a href="index.html" aria-label="Twitter"><span class="fab fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
+									<a href="index.html" aria-label="Facebook"><span class="fab fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html" aria-label="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+									<a href="index.html" aria-label="Dribbble"><span class="fab fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
+									<a href="index.html" aria-label="Instagram"><span class="fab fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</nav>
