--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 	<title>La chouette agence - Agence web design basée à Lyon</title>
 
@@ -65,9 +66,6 @@
 		<!-- bloc-1-presentation -->
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 
-			<h1 tabindex="0" class="text-center hero-bloc-text tc-white title_bellow_paper ">
-				La chouette agence
-			</h1>
 			<div class="container bloc-lg">
 
 				<div class="row tight-width-whitespace">
@@ -75,6 +73,9 @@
 					<div class="col-sm-12">
 
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Le chouette logo" />
+						<h1 tabindex="0" class="text-center hero-bloc-text tc-white title_bellow_paper ">
+							La chouette agence
+						</h1>
 						<div class="text-center">
 							<a href="agence_web_design.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 						</div>
