Adding compresed pictures

--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 
 					<figure class="col-sm-6">
 
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-							<img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/>
+						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+							<img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/>
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -235,8 +235,8 @@
 					</figure>
 					<figure class="col-sm-6">
 
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-							<img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" />
+						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+							<img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
