--- a/contact_agence_web_design.html
+++ b/contact_agence_web_design.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="Soumettez votre projet a notre agence web design ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
