--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="keywords" content="seo, google, site web, site internet, agence design paris">
 	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -51,7 +51,7 @@
 								<a tabindex="0" href="#">Accueil</a>
 							</li>
 							<li>
-								<a tabindex="0" href="agence_web_design.html">Contact</a>
+								<a tabindex="0" href="contact_agence_web_design.html">Contact</a>
 							</li>
 						</ul>
 
@@ -77,7 +77,7 @@
 							La chouette agence
 						</h1>
 						<div class="text-center">
-							<a href="agence_web_design.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+							<a href="contact_agence_web_design.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 						</div>
 
 					</div>
@@ -163,7 +163,7 @@
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.<br>
 						</h2>
 						<p tabindex="0" class="text-center white">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site web de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="agence_web_design.html">Contactez notre équipe</a><br>
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site web de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact_agence_web_design.html">Contactez notre équipe</a><br>
 						</p>
 
 					</div>
@@ -266,7 +266,7 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="agence_web_design.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+						<a href="contact_agence_web_design.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 
 				</div>
