--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
-		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+		<section class="bloc bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 
 			<div class="container bloc-lg">
 
