Adding loading imges rule

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div  class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
-							<img src="img/la-chouette-agence.webp" alt="La chouette agence" height="40" />
+							<img src="" data-src="img/la-chouette-agence.webp" alt="La chouette agence" height="40" />
 						</a>
 
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -72,7 +72,7 @@
 
 					<div class="col-sm-12">
 
-						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Le chouette logo" />
+						<img src=""  data-src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Le chouette logo" />
 						<h1 tabindex="0" class="text-center hero-bloc-text tc-white title_bellow_paper ">
 							La chouette agence
 						</h1>
@@ -189,7 +189,7 @@
 
 					<figure class="col-sm-6">
 						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-							<img src="img/1.webp" alt="Refonte du site web d'un journal" class="img-responsive portfolio-thumb" />
+							<img src="" data-src="img/1.webp" alt="Refonte du site web d'un journal" class="img-responsive portfolio-thumb" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -203,7 +203,7 @@
 
 					<figure class="col-sm-6">
 						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-							<img src="img/2.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
+							<img src="" data-src="img/2.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -221,7 +221,7 @@
 					<figure class="col-sm-6">
 
 						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-							<img src="img/3.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/>
+							<img src="" data-src="img/3.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/>
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -236,7 +236,7 @@
 					<figure class="col-sm-6">
 
 						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-							<img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" />
+							<img src="" data-src="img/4.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -349,6 +349,7 @@
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/loadImages.js"></script>
 	
 
 </body>
