--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
 
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css"/>
-	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" as="stylesheet" />
-	<link rel="preload" type="text/css" href="./css/bootstrap.css" as="stylesheet"/>
+	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" as="style" />
+	<link rel="preload" type="text/css" href="./css/bootstrap.css" as="style"/>
 	<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
 	<title>La chouette agence - Agence web design basée à Lyon</title>
