Removing preload rules

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8"/>
 	<meta name="keywords" content="seo, google, site web, site internet, agence design paris"/>
 	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
 
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css"/>
-	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" as="style" />
-	<link rel="preload" type="text/css" href="./css/bootstrap.css" as="style"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css"/>
 	<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
 	<title>La chouette agence - Agence web design basée à Lyon</title>
