Put a preloading tags

--- a/index.html
+++ b/index.html
@@ -345,11 +345,11 @@
 	</main>
 	<!-- Principal conteneur END -->
 
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/loadImages.js"></script>
+	<script rel="preload" as="script" src="./js/jquery-2.1.0.js"></script>
+	<script rel="preload" as="script" src="./js/bootstrap.js"></script>
+	<script rel="preload" as="script" src="./js/blocs.js"></script>
+	<script rel="preload" as="script" src="./js/jquery.touchSwipe.js" defer></script>
+	<script rel="preload" as="script" src="./js/loadImages.js"></script>
 	
 
 </body>
