--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 	<link rel="preload" as="font" type="text/css" href="./css/et-line.css"/>
 	<link rel="preload" as="font" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-	<link rel="preload" as="style" type="text/css" href="./css/bootstrap.css"/>
-	<link rel="preload" as="style" type="text/css" href="./css/style.css"/>
+	<link type="text/css" href="./css/bootstrap.css"/>
+	<link type="text/css" href="./css/style.css"/>
 
 	<title>La chouette agence - Agence web design basée à Lyon</title>
 
