removing a preloading tags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
 
 	<link rel="preload" as="font" type="text/css" href="./css/et-line.css"/>
-	<link rel="preload" as="font" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 	<link type="text/css" href="./css/bootstrap.css"/>
 	<link type="text/css" href="./css/style.css"/>
 
