Removing fake links

--- a/contact_agence_web_design.html
+++ b/contact_agence_web_design.html
@@ -3,10 +3,10 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8"/>
-	<meta name="keywords" content=""/>
 	<meta name="description" content="Soumettez votre projet a notre agence web design "/>
+	<meta http-equiv="Cache-Control" content="max-age=600"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
+	<link rel="shortcut icon" type="image/png" href="img/favicon.webp" title="favicon"/>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css"/>
@@ -34,7 +34,7 @@
 					<div class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
-							<img src="img/la-chouette-agence.webp" alt="La chouette agence" height="40" />
+							<img src="img/la-chouette-agence.webp" alt="La chouette agence" height="40" title="Logo" />
 						</a>
 
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
