--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8"/>
-	<meta name="keywords" content="seo, google, site web, site internet, agence design paris"/>
+	<meta name="author" content="La chouette agence"/>
 	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web"/>
+	<meta http-equiv="Cache-Control" content="max-age=600"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
 
@@ -32,7 +33,7 @@
 					<div  class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
-							<img src="." data-src="img/la-chouette-agence.webp" alt="La chouette agence" height="40" />
+							<img src="." data-src="img/la-chouette-agence.webp" alt="La chouette agence" height="40" title="Logo"/>
 						</a>
 
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -72,7 +73,7 @@
 
 					<div class="col-sm-12">
 
-						<img src="."  data-src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Le chouette logo" />
+						<img src="."  data-src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Le chouette logo" title="Logo center" />
 						<h1 tabindex="0" class="text-center hero-bloc-text tc-white title_bellow_paper ">
 							La chouette agence
 						</h1>
@@ -189,7 +190,7 @@
 
 					<figure class="col-sm-6">
 						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-							<img src="." data-src="img/1.webp" alt="Refonte du site web d'un journal" class="img-responsive portfolio-thumb" />
+							<img src="." data-src="img/1.webp" alt="Refonte du site web d'un journal" class="img-responsive portfolio-thumb" title="portfolio journal"/>
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -203,7 +204,7 @@
 
 					<figure class="col-sm-6">
 						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-							<img src="." data-src="img/2.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
+							<img src="." data-src="img/2.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" title="portfolio photographes"/>
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -221,7 +222,7 @@
 					<figure class="col-sm-6">
 
 						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-							<img src="." data-src="img/3.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/>
+							<img src="." data-src="img/3.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur" title="portfolio voyageur"/>
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -236,7 +237,7 @@
 					<figure class="col-sm-6">
 
 						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-							<img src="." data-src="img/4.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" />
+							<img src="." data-src="img/4.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" title="portfolio mariage"/>
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -289,52 +290,24 @@
 
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html" aria-label="Twitter"><span class="fab fa-twitter icon-md"></span></a>
+									<a href="index.html" aria-label="Twitter" title="twitter"><span class="fab fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html" aria-label="Facebook"><span class="fab fa-facebook icon-md"></span></a>
+									<a href="index.html" aria-label="Facebook" title="facebook"><span class="fab fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html" aria-label="Dribbble"><span class="fab fa-dribbble icon-md"></span></a>
+									<a href="index.html" aria-label="Dribbble" title="dribbble"><span class="fab fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a href="index.html" aria-label="Instagram"><span class="fab fa-instagram icon-md"></span></a>
+									<a href="index.html" aria-label="Instagram"><span class="fab fa-instagram icon-md" title="instagram"></span></a>
 								</div>
 							</div>
-						</nav>
-						<nav class="row container bloc-md-12 bloc-sm-4 text-justify" aria-label="Footer navigation">
-
-							<div class="col-md-4 col-md-offset-3 col-offset-2">
-								<h3 class="caption">Annuaires Agence</h3>
-								<ul>
-									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-									<li><a href="123site.com">123site.com</a></li>
-									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com">listeagence.com</a></li>
-								</ul>
-							</div>
-							<div class="col-md-4">
-								<h3 class="caption">Annuaires SEO</h3>
-								<ul>
-									<li><a href="listeseo.com">listeseo.com</a></li>
-									<li><a href="123seoture.com">123seo.com</a></li>
-									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-									<li><a href="betterseo.com">betterseo.com</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-								</ul>
-							</div>
-
 						</nav>
 					</div>
 				</div>
