Set more accessible colors

--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
 
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a tabindex="0" href="#">Accueil</a>
+								<a tabindex="0" href="#bloc-4-portfolio">Portfolio</a>
 							</li>
-							<li>
-								<a tabindex="0" href="contact_agence_web_design.html">Contact</a>
-							</li>
+							
 						</ul>
 
 					</div>
@@ -74,7 +72,7 @@
 					<div class="col-sm-12">
 
 						<img src="."  data-src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Le chouette logo" title="Logo center" />
-						<h1 tabindex="0" class="text-center hero-bloc-text tc-white title_bellow_paper ">
+						<h1 tabindex="0" class="text-center hero-bloc-text tc-white title_bellow_paper blue-background  ">
 							La chouette agence
 						</h1>
 						<div class="text-center">
@@ -263,7 +261,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 
-					<h2 tabindex="0" class="mg-md text-center tc-white title_bellow_paper text-sm">
+					<h2 tabindex="0" class="mg-md text-center tc-white title_bellow_paper text-sm blue-background tight-width-whitespace">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
