--- a/contact_agence_web_design.html
+++ b/contact_agence_web_design.html
@@ -52,9 +52,6 @@
 							<li>
 								<a href="index.html">Accueil</a>
 							</li>
-							<li>
-								<a href="#">Contact</a>
-							</li>
 						</ul>
 
 					</div>
@@ -83,7 +80,7 @@
 		<!-- bloc-6 END -->
 
 		<!-- bloc-7 -->
-		<div class="bloc bgc-white l-bloc" id="bloc-7">
+		<section class="bloc bgc-white l-bloc texture-paper" id="bloc-7">
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-6">
@@ -121,7 +118,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-7 END -->
 
 		<!-- ScrollToTop Button -->
