whiten texture-paper

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
-		<section class="bloc tc-white bgc-atomic-tangerine bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+		<section class="bloc tc-white bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 
 			<div class="container bloc-lg">
 
