Last commit was deprecated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" manifest="cache_manifest">
+<html lang="fr">
 <head>
 	<meta charset="utf-8"/>
 	<meta name="author" content="La chouette agence"/>
