--- a/contact_agence_web_design.html
+++ b/contact_agence_web_design.html
@@ -68,7 +68,7 @@
 		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper lighten" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="col-sm-12">
+					<div tabindex="0" class="col-sm-12">
 						<h1 class="text-center hero-bloc-text ">
 							Parlons web design !
 						</h1>
