--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<img src="." data-src="img/la-chouette-agence.webp" alt="La chouette agence" height="40" title="Logo"/>
 						</a>
 
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+						<button tabindex="0" id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -46,7 +46,7 @@
 
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 
-						<ul class="site-navigation nav navbar-nav">
+						<ul class="nav navbar-nav">
 							<li>
 								<a tabindex="0" href="#bloc-4-portfolio">Portfolio</a>
 							</li>
